# 3DViewer-in-C-QT

./: .gitignore  LICENSE  README.md
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply/: cache-v2-a94d8b522a55593bd95a.json  cmakeFiles-v1-ce28846df8e900985f74.json  codemodel-v2-90bac00c218311ccf26f.json  index-2023-08-04T08-02-51-0483.json  target-viewer-Debug-a853d35b4e9ef59b9d20.json  target-viewer_autogen-Debug-2fc8ad1fa960e623b92f.json
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/.cache/clangd/index/: __stddef_max_align_t.h.125FCFE7D22FAD18.idx  cstddef.1B1660D44A2E846D.idx  fcntl.h.6E74AE2AC7742A71.idx  inttypes.h.81794ACE3F347BD0.idx  inttypes.h.DB1B1C99E706BC23.idx  limits.h.43CE79875834BA20.idx  limits.h.936FAC89EC2DCCF5.idx  limits.h.C2BDE1A2392A9A2A.idx  main.cpp.3A9447230A6FADC4.idx  mainwindow.cpp.71EE775425991083.idx  mainwindow.h.82A6E84AFA868450.idx  parser.c.F890B86A090392FB.idx  parser.h.A80911F9FEBED64B.idx  qbytearray.h.2D0A495080B91123.idx  qbytearrayalgorithms.h.907800C785AE5803.idx  qcoreevent.h.202CE5CFAD50664C.idx  qkeysequence.h.C7712C439AFEA928.idx  qlocale.h.83E711EB1DDA8303.idx  qmetatype.h.90F0866D82FFCCC5.idx  qobject.h.A55EEB5940132958.idx  qobjectdefs.h.82D51E5AC308EE32.idx  qobjectdefs.h.A51F8E39F99BFCC6.idx  qstring.h.5F856C9E0F9ECAA7.idx  qsurfaceformat.h.29ED27DF3D10E1E4.idx  qwindowdefs.h.994D835EC3F99C6A.idx  stdarg.h.DE0FD003ABB8934A.idx  stdarg.h.EAADC37740453F9A.idx  stddef.h.32AF44564392E67D.idx  (+7 more)
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/viewer.app/Contents/MacOS/: viewer
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/viewer_autogen/: mocs_compilation.cpp
build-src-Desktop_x86_darwin_generic_mach_o_64bit-Debug/viewer_autogen/3T4JOTWOLB/: moc_mainwindow.cpp.d
src/: CMakeLists.txt  Makefile
src/Model/: parser.h
src/View/: controller.cpp  controller.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/back/: affine.c  parser.c  parser.h  viewer.h
src/back/tests/: test.c
src/documentation/: doxyfile
src/front/: CMakeLists.txt  CMakeLists.txt.user.4490ece  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
